@@ -21,3 +21,15 @@ http://citeseer.nj.nec.com/bonwick94slab.html
 The current implementation in libhurd-slab is only a dummy
 implementation using malloc and free, though.
 
+
+
+Copyright 2003 Free Software Foundation, Inc.
+Written by Marcus Brinkmann <marcus@gnu.org>
+
+This file is free software; as a special exception the author gives
+unlimited permission to copy and/or distribute it, with or without
+modifications, as long as this notice is preserved.
+ 
+This file is distributed in the hope that it will be useful, but
+WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
+implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
