@@ -1,3 +1,14 @@
 2003-08-17  Marcus Brinkmann  <marcus@gnu.org>
 
 	* Initial check-in.
+
+
+Copyright 2003 Free Software Foundation, Inc.
+
+This file is free software; as a special exception the author gives
+unlimited permission to copy and/or distribute it, with or without
+modifications, as long as this notice is preserved.
+ 
+This file is distributed in the hope that it will be useful, but
+WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
+implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
